--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1056,63 +1056,10 @@ a {
 .cid-svR5T2vaV1 .mbr-text {
   color: #ffffff;
 }
-.cid-sweuSj7Vov {
-  padding-top: 0rem;
-  padding-bottom: 0rem;
-  background-color: #353535;
-}
-.cid-sweuSj7Vov .mbr-text {
-  color: #767676;
-}
-.cid-sweuSj7Vov .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-sweuSj7Vov .title .num {
-  width: 100%;
-  display: block;
-}
-.cid-sweuSj7Vov .title .card-title {
-  z-index: 1;
-}
-.cid-sweuSj7Vov .num {
-  color: #6592e6;
-}
-@media (max-width: 767px) {
-  .cid-sweuSj7Vov * {
-    text-align: center !important;
-  }
-  .cid-sweuSj7Vov .content-column {
-    margin-bottom: 2rem;
-  }
-}
-.cid-sweuSj7Vov .card-title,
-.cid-sweuSj7Vov .card-img {
-  color: #fafafa;
-}
-.cid-svU211VJR5 {
-  padding-top: 6rem;
-  padding-bottom: 2rem;
-  background-color: #353535;
-}
-@media (max-width: 991px) {
-  .cid-svU211VJR5 .image-wrapper {
-    margin-bottom: 1rem;
-  }
-}
-.cid-svU211VJR5 .row {
-  flex-direction: row-reverse;
-}
-.cid-svU211VJR5 img {
-  width: 100%;
-}
-.cid-svU211VJR5 .mbr-text {
-  text-align: left;
-  color: #fafafa;
-}
 .cid-svUalZedht {
   padding-top: 0rem;
   padding-bottom: 7rem;
-  background-color: #353535;
+  background-color: #ffffff;
 }
 @media (max-width: 991px) {
   .cid-svUalZedht .image-wrapper {
@@ -1126,168 +1073,6 @@ a {
   width: 100%;
 }
 .cid-svUalZedht .mbr-description {
-  color: #fafafa;
-}
-.cid-svU9YlHdRi {
-  padding-top: 0rem;
-  padding-bottom: 7rem;
-  background-color: #353535;
-}
-@media (max-width: 991px) {
-  .cid-svU9YlHdRi .image-wrapper {
-    margin-bottom: 1rem;
-  }
-}
-.cid-svU9YlHdRi .row {
-  flex-direction: row-reverse;
-}
-.cid-svU9YlHdRi img {
-  width: 100%;
-}
-.cid-svU9YlHdRi .mbr-description {
-  color: #fafafa;
-}
-.cid-svUalDnAuY {
-  padding-top: 0rem;
-  padding-bottom: 7rem;
-  background-color: #353535;
-}
-@media (max-width: 991px) {
-  .cid-svUalDnAuY .image-wrapper {
-    margin-bottom: 1rem;
-  }
-}
-.cid-svUalDnAuY .row {
-  flex-direction: row-reverse;
-}
-.cid-svUalDnAuY img {
-  width: 100%;
-}
-.cid-svUalDnAuY .mbr-description {
-  color: #fafafa;
-}
-.cid-svVM9mwd2y {
-  padding-top: 6rem;
-  padding-bottom: 2rem;
-  background-color: #353535;
-}
-@media (max-width: 991px) {
-  .cid-svVM9mwd2y .image-wrapper {
-    margin-bottom: 1rem;
-  }
-}
-.cid-svVM9mwd2y .row {
-  flex-direction: row-reverse;
-}
-.cid-svVM9mwd2y img {
-  width: 100%;
-}
-.cid-svVLpHF0tc {
-  padding-top: 0rem;
-  padding-bottom: 6rem;
-  background-color: #353535;
-}
-@media (max-width: 991px) {
-  .cid-svVLpHF0tc .image-wrapper {
-    margin-bottom: 1rem;
-  }
-}
-.cid-svVLpHF0tc .row {
-  flex-direction: row-reverse;
-}
-.cid-svVLpHF0tc img {
-  width: 100%;
-}
-.cid-svVLpHF0tc .mbr-description {
-  color: #fafafa;
-}
-.cid-svUalhedzl {
-  padding-top: 0rem;
-  padding-bottom: 7rem;
-  background-color: #353535;
-}
-@media (max-width: 991px) {
-  .cid-svUalhedzl .image-wrapper {
-    margin-bottom: 1rem;
-  }
-}
-.cid-svUalhedzl .row {
-  flex-direction: row-reverse;
-}
-.cid-svUalhedzl img {
-  width: 100%;
-}
-.cid-svUalhedzl .mbr-description {
-  color: #fafafa;
-}
-.cid-svU20wdBYS {
-  padding-top: 0rem;
-  padding-bottom: 0rem;
-  background-color: #353535;
-}
-@media (max-width: 991px) {
-  .cid-svU20wdBYS .image-wrapper {
-    margin-bottom: 1rem;
-  }
-}
-.cid-svU20wdBYS .row {
-  flex-direction: row-reverse;
-}
-.cid-svU20wdBYS img {
-  width: 100%;
-}
-.cid-svUakBMO9o {
-  padding-top: 2rem;
-  padding-bottom: 7rem;
-  background-color: #353535;
-}
-@media (max-width: 991px) {
-  .cid-svUakBMO9o .image-wrapper {
-    margin-bottom: 1rem;
-  }
-}
-.cid-svUakBMO9o .row {
-  flex-direction: row-reverse;
-}
-.cid-svUakBMO9o img {
-  width: 100%;
-}
-.cid-svUakBMO9o .mbr-description {
-  color: #fafafa;
-}
-.cid-svVNEVEXMe {
-  padding-top: 6rem;
-  padding-bottom: 3rem;
-  background-color: #353535;
-}
-@media (max-width: 991px) {
-  .cid-svVNEVEXMe .image-wrapper {
-    margin-bottom: 1rem;
-  }
-}
-.cid-svVNEVEXMe .row {
-  flex-direction: row-reverse;
-}
-.cid-svVNEVEXMe img {
-  width: 100%;
-}
-.cid-svVPW2zIAf {
-  padding-top: 0rem;
-  padding-bottom: 6rem;
-  background-color: #353535;
-}
-@media (max-width: 991px) {
-  .cid-svVPW2zIAf .image-wrapper {
-    margin-bottom: 1rem;
-  }
-}
-.cid-svVPW2zIAf .row {
-  flex-direction: row-reverse;
-}
-.cid-svVPW2zIAf img {
-  width: 100%;
-}
-.cid-svVPW2zIAf .mbr-description {
   color: #fafafa;
 }
 .cid-svUeDh6VgY {
